examples/invalid/not_declared/index.vbr
moderato() {
    arr: Melody<quarter> <-> [1,2,3,4]|
    |>(arr[i])|
}